--- a/data/lang/normal/English.lng
+++ b/data/lang/normal/English.lng
@@ -34,6 +34,7 @@ Are you sure you want to clear your session and lifetime stats? This action can'
 Are you sure you want to clear your session stats? This action can't be undone=Are you sure you want to clear your session stats? This action can't be undone
 Are you sure you want to quit the game? You will lose all progress for this current game session=Are you sure you want to quit the game? You will lose all progress for this current game session
 Are you sure you want to reset all of your game progresses?=Are you sure you want to reset all of your game progresses?
+Are you sure you want to reset all of your settings?=Are you sure you want to reset all of your settings?
 Are you sure you want to reset your lifetime achievements? This action can't be undone=Are you sure you want to reset your lifetime achievements? This action can't be undone
 Are you sure you want to reset your session achievements? This action can't be undone=Are you sure you want to reset your session achievements? This action can't be undone
 Are you sure you want to reset your session and lifetime achievements? This action can't be undone=Are you sure you want to reset your session and lifetime achievements? This action can't be undone
@@ -180,6 +181,8 @@ Session Statistics menu=Session Statistics menu
 Session Statistics=Session Statistics
 Session achievements=Session achievements
 Session and lifetime achievements=Session and lifetime achievements
+Settings reset=Settings reset
+Settings saved=Settings saved
 Shop menu=Shop menu
 Speaker test complete=Speaker test complete
 Speaker test menu=Speaker test menu
@@ -297,6 +300,10 @@ Your session and lifetime achievements have been cleared=Your session and lifeti
 Your session and lifetime stats have been cleared=Your session and lifetime stats have been cleared
 Your session stats have been cleared=Your session stats have been cleared
 alarm =alarm
+alarm off=alarm off
+alarm on=alarm on
+ambience off=ambience off
+ambience on=ambience on
 ammo pack, costs =ammo pack, costs
 ammo pack=ammo pack
 ammo_pack=ammo_pack
@@ -334,6 +341,8 @@ gards= gards
 guards= guards
 hammer equipped=hammer equipped
 heart =heart
+heartbeat off=heartbeat off
+heartbeat on=heartbeat on
 keys= keys
 knife equipped=knife equipped
 laser equipped=laser equipped
@@ -351,6 +360,8 @@ machinegun equipped=machinegun equipped
 master game volume: adjustable=master game volume: adjustable
 menu music volume: adjustable=menu music volume: adjustable
 minutes, = minutes,
+music off=music off
+music on=music on
 of = of
 of the Endless game mode= of the Endless game mode
 of the Lifetime Pacer achievement= of the Lifetime Pacer achievement
